refactor: remove camposPersonalizados de comentários de relatório e simplifica atualização de mão de obra e equipamentos